# grpc-example

./: Cargo.toml  build.rs
schema/: api.proto
src/: lib.rs  server.rs  service.rs
