[package]
name = "grpc-example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"


[[bin]]
path = "src/server.rs"
name = "server"
